--- a/style.css
+++ b/style.css
@@ -75,12 +75,13 @@ label{font-size:.9rem;color:var(--text-muted)}
   text-decoration: none;
   margin: 5px 2px;
   border-radius: 50%;
+  
 }
 .fa:hover {opacity: 0.7;}
 .fa-instagram {background: #125688; color: white;}
 
 /* Footer */
-footer{padding:28px 0;color:var(--text-muted);border-top:1px solid rgba(148,163,184,.15)}
+footer{padding:28px 0;color:#000000;border-top:1px solid rgba(148,163,184,.15)}
 
 /* Responsive */
 @media (max-width: 900px){
