--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ section{padding:54px 0}
 /* Gallery */
 .gallery{display:grid;grid-template-columns:repeat(4,1fr);gap:10px}
 .gallery img{aspect-ratio:1/1;object-fit:cover}
+.imggalerie{width:280px; height: 280px; object-fit: cover; border-radius: 12px;}
 
 /* Reservation */
 form{display:grid;gap:12px}
